<resources>
    <!-- TÍTULOS -->
    <string name="app_name">IMC</string>
    <string name="title_imc">Calculadora IMC</string>

    <!-- INPUTS -->
    <string name="placeholder_weight">65</string>
    <string name="placeholder_height">1.63</string>
    <string name="calc_button">Calcular</string>
    <string name="weight_text_view">Peso (Kg)</string>
    <string name="height_text_view">Altura (m)</string>
    <string name="hint_weight_edit_text">65</string>
    <string name="hint_height_edit_text">1.75</string>

    <!--  RESPOSTAS SOBRE O PESO  -->
    <string name="magreza">Abaixo do peso</string>
    <string name="peso_normal">Peso normal</string>
    <string name="sobre_peso">Você está sobrepeso</string>
    <string name="obesidade_grau_i">Você está com Obesidade Grau I</string>
    <string name="obesidade_grau_ii">Você está com Obesidade Grau II</string>
    <string name="obesidade_grau_iii">Você está com Obesidade Grau III</string>

    <!-- Resultados IMC -->
    <string name="resultado_imc">O seu IMC é: %1$s</string>
    <string name="result_peso">Digite seu peso, sua altura e clique em calcular para saber o seu índice de massa corporal</string>
    <string name="result_status">Peso Ideal</string>
    <string name="image_description">Status de peso</string>

</resources>