<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.5"
        android:background="@color/backgroundTopColor"
        android:orientation="vertical"
        android:padding="@dimen/second_container_padding">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_imc"
            android:textAlignment="center"
            android:textColor="@color/title_color"
            android:textSize="@dimen/title_text_size"
            android:textStyle="bold|italic" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <TextView
                    style="@style/label_form_middle"
                    android:text="@string/weight_text_view" />

                <TextView
                    style="@style/label_form_middle"
                    android:layout_marginStart="@dimen/text_view_altura_margin_start"
                    android:text="@string/height_text_view" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/edit_text_container_margin_top"
                android:layout_marginBottom="@dimen/edit_text_container_margin_bottom"
                android:gravity="center"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/etPeso"
                    style="@style/input_form"
                    android:layout_marginEnd="8dp"
                    android:hint="@string/hint_weight_edit_text"
                    android:inputType="number"
                    android:maxLength="5"
                    android:autofillHints="" />

                <EditText
                    android:id="@+id/etAltura"
                    style="@style/input_form"
                    android:layout_marginStart="8dp"
                    android:hint="@string/hint_height_edit_text"
                    android:inputType="number"
                    android:autofillHints="" />
            </LinearLayout>

            <Button
                android:id="@+id/btCalcular"
                style="@style/button"
                android:text="@string/calc_button" />
        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.5"
        android:background="@color/backgroundBottomColor"
        android:padding="16dp">

        <TextView
            android:id="@+id/tvIMC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/result_peso"
            android:textAlignment="center"
            android:textSize="22sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/ivIMCStatus"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/tvIMCStatus"
            android:layout_below="@+id/tvIMC"
            android:src="@drawable/masc_default"
            android:contentDescription="@string/image_description" />

        <TextView
            android:id="@+id/tvIMCStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text=""
            android:textAlignment="center"
            android:textColor="#000"
            android:textSize="@dimen/status_peso_text_size"
            android:textStyle="bold" />

    </RelativeLayout>


</LinearLayout>